# creativity-generation-unit

./: .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-TW.md  ROADMAP.md  academic_abstract.md  pyproject.toml
.claude/skills/creative-ideation/: SKILL.md  examples.md  scenarios.md
.claude/skills/memory-checkpoint/: SKILL.md
.claude/skills/test-generator/: SKILL.md
.gemini/: GEMINI.md
.github/workflows/: ci.yml
docs/: competitor-analysis-brainstorming.md  creativity-core-v2.md  creativity-generation-unit.md  smithery-skills-coding.md  smithery-skills-communication.md  smithery-skills-data-analytics.md  smithery-skills-design.md  smithery-skills-index.md  smithery-skills-planning.md  smithery-skills-productivity.md  smithery-skills-research.md  smithery-skills-writing.md  spark-soup-design.md
mcp-config/: claude_desktop_config.json  vscode_mcp_settings.json
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md
skills/creative-ideation/: methods-quick-ref.md
src/cgu/: server.py
src/cgu/agents/: explorer.py  spark.py
src/cgu/core/: __init__.py  adversarial.py  analogy.py  deliberation.py  evaluation.py  graph.py  session.py
src/cgu/llm/: client.py  prompts.py
src/cgu/soup/: __init__.py  spark_soup.py
tests/: test_creativity_core_v2.py  test_creativity_tools.py  test_deliberation_evaluation.py  test_llm_basic.py  test_llm_detail.py  test_quick.py  test_scamper_llm.py  test_session_manager.py  test_spark_soup.py  test_thinking_integration.py
