[project]
name = "creativity-generation-unit"
version = "0.1.0"
description = "CGU - MCP-based Agent-to-Agent Creative Idea Generator with Fast/Slow Thinking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["mcp", "agent", "creativity", "langgraph", "ollama", "qwen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP SDK (FastMCP)
    "mcp[cli]>=1.0.0",
    # LangGraph 1.0+ for Agent Orchestration (Functional API)
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    # OpenAI-compatible API client (for vLLM)
    "openai>=1.0.0",
    # Structured Output
    "pydantic>=2.0.0",
    "instructor>=1.0.0",
    # Web Search
    "duckduckgo-search>=6.0.0",
    # Utilities
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "langchain-ollama>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

# Ollama Python SDK (可選)
ollama = [
    "ollama>=0.4.0",
]

[project.scripts]
cgu = "cgu.cli:main"
cgu-server = "cgu.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cgu"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
